@@ -190,45 +190,9 @@ if ( 0 ) {
 
 @ARGV = grep( ! /SQLITE_LOCATION|USE_LOCAL_SQLITE/, @ARGV );
 
-foreach my $file (qw/sqlite3.h sqlite3.c/) {
-	(my $pm = $file) =~ tr/./_/;
-	print "generating lib/DBD/SQLite/$pm.pm\n";
-	open my $fh, '>', "lib/DBD/SQLite/$pm.pm" or die $!;
-	print $fh <<"EOT";
-package DBD::SQLite::$pm;
 
-use strict;
-our \$CODE = do { local \$/; <DATA> };
 
-sub get {
-	my (\$class, \$file, \$out) = \@_;
-	my \$got;
-	if (\$file) {
-		(\$got) = \$CODE =~ m{(
-			/\\*+[ ]Begin[ ]file[ ]\$file[ ]\\*+
-			.+?
-			/\\*+[ ]End[ ]of[ ]\$file[ ]\\*+/
-		)}sx;
-	}
-	else {
-		\$got = \$CODE;
-	}
-	if (\$got && \$out) {
-		open my \$fh, '>', \$out or die \$!;
-		print \$fh \$got;
-	}
-	return \$got ? \$got : '';
-}
 
-1;
-\__DATA__
-EOT
-	print $fh do {
-		local $/;
-		open my $in, '<', $file or die $!;
-		<$in>;
-	};
-}
 
 #####################################################################
 # Prepare Compiler Options
@@ -287,7 +251,7 @@ WriteMakefile(
 	ABSTRACT         => 'Self Contained SQLite RDBMS in a DBI Driver',
 	VERSION_FROM     => 'lib/DBD/SQLite.pm',
 	AUTHOR           => 'Adam Kennedy <adamk@cpan.org>',
-		# Release manager (can this be an array?)
+	# Release manager (can this be an array?)
 	PREREQ_PM        => {
 		'Tie::Hash'        => 0,
 		'File::Spec'       => (WINLIKE ? '3.27' : '0.82'),
